# TreeDebater

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  question.md
.github/workflows/: ci.yml
src/: agents.py  compare_env.py  debate_tree.py  env.py  evaluator.py  ouragents.py  prepare.py  searcher.py  tts.py  tts_streaming.py
src/configs/: base.yml  base_st.yml  base_st_io.yml  compare.yml  create_config.py  overlap_debate.yml  overlap_debate_2.yml
src/scripts/: README_LOGGING.md  analyze_agent_timing.py  analyze_streaming_performance.py  debate_tree_extract.py  overlap_viz.py  overlap_viz.sh  overlap_viz_par.py  train_reward_model_llama.py
src/streaming/: README.md  __init__.py  bridges.py  chunk_audio.py  env.py  overlap.py  run_listen_demo.py
src/utils/: constants.py  db.py  fs_wrapper.py  helper.py  llm_schemas.py  model.py  time_estimator.py  timing_log.py  tool.py
src/utils/prompts/: __init__.py  closing.py  evaluation.py  opening.py  others.py  rebuttal.py  search.py
